Fixed settings button being cut off.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,7 +7,7 @@
     align-items: center;
     list-style-type: none;
     margin: 0;
-    height:2rem;
+    height:2.5rem;
     padding: 0 $mobile-indent;
     @include tablet{
         padding: 0 $tablet-indent;
